--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta name="description" content="Uma pequena sinopse do site!!"/>
     <meta name="keyword" content="colocar palavras chaves do site!!"/>
     <meta name="author" content="Kauã Henrique Gonçalves"/>
-    <link rel="icon" href=""/>
-    <link rel="stylesheet" type="text/css" href=""/>
     <title>Colégio Alpha</title>
+
+    <!-- LINKS -->
+    <link rel="stylesheet" type="text/css" href="css/index-css.css"/>
+    <link rel="icon" href="image/icon/icon-alpha.png"/>
 
     <!-- CSS SWIPER -->
     <link rel="stylesheet" type="text/css" href=""/>
