--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- LINKS -->
     <link rel="stylesheet" type="text/css" href="css/index-css.css"/>
     <link rel="icon" href="image/icon/icon-alpha.png"/>
+    <link rel="" />
 
     <!-- CSS SWIPER -->
     <link rel="stylesheet" type="text/css" href=""/>
@@ -19,6 +20,27 @@
 </head>
 
 <body>
+
+    <!-- CABEÇALHO DO SITE -->
+       <header>
+          <!-- INFORMAÇÕES DE AJUDA -->
+            <div class="topo-menu">
+                <div class="info-menu">
+                   <p>Necessita de ajuda?</p>
+                   <img src="image/icon/icon-telefone.png" width="15px"><a href="#"><span class="numero">(81) 00000-0000</span></a>
+                   <img src="image/icon/icon-email.png" width="15px"><a href="#"><span class="email">aaaaaaaaaaa@alpha.edu.br</span></a>
+                </div>
+
+                <nav>
+                    
+                </nav>
+            </div>
+          <!-- OFF INFORMAÇÕES DE AJUDA -->
+       </header>
+    <!-- OFF CABEÇALHO DO SITE -->
+
 </body>
 
+   <!-- JAVASCRIPT -->
+   <script src="js/script.js"></script>
 </html>
