add menu dropdawm

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <!-- LINKS -->
     <link rel="stylesheet" type="text/css" href="css/index-css.css"/>
     <link rel="icon" href="image/icon/icon-alpha.png"/>
-    <link rel="" />
 
     <!-- CSS SWIPER -->
     <link rel="stylesheet" type="text/css" href=""/>
@@ -26,21 +25,53 @@
           <!-- INFORMAÇÕES DE AJUDA -->
             <div class="topo-menu">
                 <div class="info-menu">
-                   <p>Necessita de ajuda?</p>
-                   <img src="image/icon/icon-telefone.png" width="15px"><a href="#"><span class="numero">(81) 00000-0000</span></a>
-                   <img src="image/icon/icon-email.png" width="15px"><a href="#"><span class="email">aaaaaaaaaaa@alpha.edu.br</span></a>
+                   <p>Necessitasse de ajuda?</p>
+                   <img src="image/icon/icon-telefone.png" width="15px"><span class="numero">(81) 00000-0000</span>
+                   <img src="image/icon/icon-email.png" width="15px"><span class="email">aaaaaaaaaaa@alpha.edu.br</span>
                 </div>
-
-                <nav>
-                    
-                </nav>
             </div>
+                  <!-- MENU DROPDOWM -->
+                  <div class="head-menu">
+                     <img src="image/icon/logo-colegio-alpha.png" class="logo">
+                     <nav class="navbar" id="menu">
+                        <ul id="content">
+                           <li><a href="#">início</a></li>
+                           <li><a href="#">instituição</a>
+                              <ul>
+                                <li><a href="#">início</a></li>
+                                <li><a href="#">início</a></li>
+                                <li><a href="#">início</a></li>
+                                <li><a href="#">início</a></li>
+                                <li><a href="#">início</a></li>
+                              </ul>
+                           </li>
+                           <li><a href="#">proposta pedagógica</a>
+                              <ul>
+                                <li><a href="#">início</a></li>
+                                <li><a href="#">início</a></li>
+                                <li><a href="#">início</a></li>
+                                <li><a href="#">início</a></li>
+                              </ul>
+                           </li>
+                           <li><a href="#">agênda eletrônica</a></li>
+                           <li><a href="#">notícias</a></li>
+                        </ul>
+                     </nav>
+                  </div>
+                   <!-- OFF MENU DROPDOWM -->
           <!-- OFF INFORMAÇÕES DE AJUDA -->
        </header>
     <!-- OFF CABEÇALHO DO SITE -->
+      
+      <main>
+      </main>
 
+      <footer>
+      </footer>
 </body>
+
 
    <!-- JAVASCRIPT -->
    <script src="js/script.js"></script>
+
 </html>
