--- a/index.html
+++ b/index.html
@@ -33,24 +33,26 @@
                   <!-- MENU DROPDOWM -->
                   <div class="head-menu">
                      <img src="image/icon/logo-colegio-alpha.png" class="logo">
+                        <input type="checkbox" id="menu-bar">
+                        <label for="menu-bar"><img src="image/icon/icon-menu.png" width="35px"/></label>
+
                      <nav class="navbar" id="menu">
                         <ul id="content">
                            <li><a href="#">início</a></li>
-                           <li><a href="#">instituição</a>
+                           <li><a href="#">instituição<img src="image/icon/icon-seta-baixo.png" width="10px"></a>
                               <ul>
-                                <li><a href="#">início</a></li>
-                                <li><a href="#">início</a></li>
-                                <li><a href="#">início</a></li>
-                                <li><a href="#">início</a></li>
-                                <li><a href="#">início</a></li>
+                                <li><a href="#">regras e normas</a></li>
+                                <li><a href="#">regimento</a></li>
+                                <li><a href="#">nossa identidade</a></li>
+                                <li><a href="#">infraestrutura</a></li>
                               </ul>
                            </li>
-                           <li><a href="#">proposta pedagógica</a>
+                           <li><a href="#">proposta pedagógica<img src="image/icon/icon-seta-baixo.png" width="10px"></a>
                               <ul>
-                                <li><a href="#">início</a></li>
-                                <li><a href="#">início</a></li>
-                                <li><a href="#">início</a></li>
-                                <li><a href="#">início</a></li>
+                                <li><a href="#">ensino infantil</a></li>
+                                <li><a href="#">ensino fundamental i</a></li>
+                                <li><a href="#">ensino fundamental ii</a></li>
+                                <li><a href="#">ensino médio</a></li>
                               </ul>
                            </li>
                            <li><a href="#">agênda eletrônica</a></li>
