--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <!-- INFORMAÇÕES DE AJUDA -->
             <div class="topo-menu">
                 <div class="info-menu">
-                   <p>Necessitasse de ajuda?</p>
+                   <p>central de atendimento:</p>
                    <img src="image/icon/icon-telefone.png" width="15px"><span class="numero">(81) 00000-0000</span>
                    <img src="image/icon/icon-email.png" width="15px"><span class="email">aaaaaaaaaaa@alpha.edu.br</span>
                 </div>
