--- a/index.html
+++ b/index.html
@@ -1,69 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Uma pequena sinopse do site!!"/>
-    <meta name="keyword" content="colocar palavras chaves do site!!"/>
-    <meta name="author" content="Kauã Henrique Gonçalves"/>
-    <title>Colégio Alpha</title>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Uma pequena sinopse do site!!"/>
+   <meta name="keyword" content="colocar palavras chaves do site!!"/>
+   <meta name="author" content="Kauã Henrique Gonçalves"/>
+   <title>Colégio Alpha</title>
 
-    <!-- LINKS -->
-    <link rel="stylesheet" type="text/css" href="css/index-css.css"/>
-    <link rel="icon" href="image/icon/icon-alpha.png"/>
+   <!-- -------------------LINKS------------------- -->
+   <link rel="stylesheet" type="text/css" href="css/index-css.css"/>
+   <link rel="icon" href="image/icon/icon-alpha.png"/>
 
-    <!-- CSS SWIPER -->
-    <link rel="stylesheet" type="text/css" href=""/>
+   <!-- -------------------CSS SWIPER------------------- -->
+   <link rel="stylesheet" type="text/css" href=""/>
 
 </head>
 
 <body>
 
-    <!-- CABEÇALHO DO SITE -->
-       <header>
-          <!-- INFORMAÇÕES DE AJUDA -->
+   <!-- CABEÇALHO DO SITE -->
+      <header style="background-image: url('image/background/backgroung-banner.png');">
+         <!-- INFORMAÇÕES DE AJUDA -->
             <div class="topo-menu">
-                <div class="info-menu">
-                   <p>central de atendimento:</p>
-                   <img src="image/icon/icon-telefone.png" width="15px"><span class="numero">(81) 00000-0000</span>
-                   <img src="image/icon/icon-email.png" width="15px"><span class="email">aaaaaaaaaaa@alpha.edu.br</span>
-                </div>
+               <div class="info-menu">
+                  <p>central de atendimento:</p>
+                  <img src="image/icon/icon-telefone.png" width="15px"><span class="numero">(81) 00000-0000</span>
+                  <img src="image/icon/icon-email.png" width="15px"><span class="email">aaaaaaaaaaa@alpha.edu.br</span>
+               </div>
             </div>
-                  <!-- MENU DROPDOWM -->
-                  <div class="head-menu">
-                     <img src="image/icon/logo-colegio-alpha.png" class="logo">
-                        <input type="checkbox" id="menu-bar">
-                        <label for="menu-bar"><img src="image/icon/icon-menu.png" width="35px"/></label>
+         <!-- OFF INFORMAÇÕES DE AJUDA -->
 
-                     <nav class="navbar" id="menu">
-                        <ul id="content">
-                           <li><a href="#">início</a></li>
-                           <li><a href="#">instituição<img src="image/icon/icon-seta-baixo.png" width="10px"></a>
-                              <ul>
-                                <li><a href="#">regras e normas</a></li>
-                                <li><a href="#">regimento</a></li>
-                                <li><a href="#">nossa identidade</a></li>
-                                <li><a href="#">infraestrutura</a></li>
-                              </ul>
-                           </li>
-                           <li><a href="#">proposta pedagógica<img src="image/icon/icon-seta-baixo.png" width="10px"></a>
-                              <ul>
-                                <li><a href="#">ensino infantil</a></li>
-                                <li><a href="#">ensino fundamental i</a></li>
-                                <li><a href="#">ensino fundamental ii</a></li>
-                                <li><a href="#">ensino médio</a></li>
-                              </ul>
-                           </li>
-                           <li><a href="#">agênda eletrônica</a></li>
-                           <li><a href="#">notícias</a></li>
-                        </ul>
-                     </nav>
-                  </div>
-                   <!-- OFF MENU DROPDOWM -->
-          <!-- OFF INFORMAÇÕES DE AJUDA -->
-       </header>
-    <!-- OFF CABEÇALHO DO SITE -->
+         <!-- MENU DROPDOWM -->
+            <div class="head-menu">
+               <img src="image/icon/logo-colegio-alpha.png" class="logo">
+               <input type="checkbox" id="menu-bar">
+               <label for="menu-bar"><img src="image/icon/icon-menu.png" width="35px"/></label>
+
+                  <nav class="navbar" id="menu">
+                     <ul id="content">
+                        <li><a href="#">início</a></li>
+                        <li><a href="#">instituição<img src="image/icon/icon-seta-baixo.png" width="10px"></a>
+                           <ul>
+                              <li><a href="#">regras e normas</a></li>
+                              <li><a href="#">regimento</a></li>
+                              <li><a href="#">nossa identidade</a></li>
+                              <li><a href="#">infraestrutura</a></li>
+                           </ul></li>
+                        <li><a href="#">proposta pedagógica<img src="image/icon/icon-seta-baixo.png" width="10px"></a>
+                           <ul>
+                              <li><a href="#">ensino infantil</a></li>
+                              <li><a href="#">ensino fundamental i</a></li>
+                              <li><a href="#">ensino fundamental ii</a></li>
+                              <li><a href="#">ensino médio</a></li>
+                           </ul></li>
+                        <li><a href="#">agênda eletrônica</a></li>
+                        <li><a href="#">notícias</a></li>
+                     </ul>
+                  </nav>
+            </div>
+         <!-- OFF MENU DROPDOWM -->
+
+         <!-- BANNER -->
+            <section class="banner">
+               <div class="banner-text">
+                  <h1>Colégio Alpha</h1>
+                  <p>A educação transforma pessoas, as pessoas transformam o mundo.</p>
+               </div>
+            </section>
+         <!-- OFF BANNER -->
+
+      </header>
+   <!-- OFF CABEÇALHO DO SITE -->
       
       <main>
       </main>
