--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <section class="banner">
                <div class="banner-text">
                   <h1>Colégio Alpha</h1>
-                  <p>A educação transforma pessoas, as pessoas transformam o mundo.</p>
+                  <p>A educação transforma pessoas, as<br>pessoas transformam o mundo.</p>
                </div>
             </section>
          <!-- OFF BANNER -->
