--- a/index.html
+++ b/index.html
@@ -66,21 +66,60 @@
             <section class="banner">
                <div class="banner-text">
                   <h1>Colégio Alpha</h1>
-                  <p>A educação transforma pessoas, as<br>pessoas transformam o mundo.</p>
+                  <p>A educação transforma pessoas,<br> as pessoas transformam o mundo.</p>
                </div>
             </section>
          <!-- OFF BANNER -->
-
       </header>
    <!-- OFF CABEÇALHO DO SITE -->
-      
+   
+   <!-- PARTE PRINCIPAL DO SITE -->
       <main>
       </main>
+   <!-- OFF PARTE PRINCIPAL DO SITE -->
 
+   <!-- RODAPÉ DO SITE -->
       <footer>
-      </footer>
-</body>
+         <div id="footer-content">
+            <div id="footer-contacts">
+               <h1>Colégio Alpha</h1>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
 
+               <div id="footer-social-midia">
+                  <a href="#" class="footer-link" id="instagram"><img src="image/icon/icon-instagram.png"></a>
+               </div>
+            </div>
+               <ul class="footer-list">
+                  <li><h3>Onde Estamos?</h3></li>
+                  <li><a href="https://goo.gl/maps/S7ZNQ6NuBEBZUpix9" target="_blank" class="footer-link">Av. Dr. Cláudio José Gueiros, 2491 Shopping Norte Janga – Paulista/PE</a></li>
+                     
+                  <li id="list-margin"><h3>Política de Privacidade</h3></li>
+                  <li><a href="#" class="footer-link">Saiba mais></a></li>
+               </ul>
+               <ul class="footer-list">
+                  <li><h3>Central de Atendimento</h3></li>
+                  <li><p id="li-dif">Telefone: (81) 3317-0212</p></li>
+                  <li><p id="li-dif">WhatsApp: (81) 99838-0081</p></li>
+               </ul>
+               <ul class="footer-list">
+                  <li><h3>Portais Alpha</h3></li>
+                  <li><a href="#" class="footer-link">Sobre></a></li>
+                  <li><a href="#" class="footer-link">Parcerias</a></li>
+                  <li><a href="#" class="footer-link">Ouvidoria</a></li>
+                  <li><a href="#" class="footer-link">Faculdade Alpha</a></li>
+                  <li><a href="#" class="footer-link">Pós-Graduação</a></li>
+                  <li><a href="#" class="footer-link">Grupo Alpha</a></li>
+               </ul>
+         </div>
+         <div id="footer-copyright">
+            <img src="image/icon/selo-responsa.png">
+            <p>alpha educação - todos os direitos reservados<br>rua gervásio pires, 826, recife - pe</p>
+            <p id="dev">&#169copyright - alpha 2023 da educação infantil ao ensino superior</p>
+         </div>
+      </footer>
+   <!-- OFF RODAPÉ DO SITE -->
+   
+</body>
 
    <!-- JAVASCRIPT -->
    <script src="js/script.js"></script>
