add cookies and news

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                               <li><a href="#">regimento</a></li>
                               <li><a href="#">nossa identidade</a></li>
                               <li><a href="#">infraestrutura</a></li>
+                              <li><a href="#">equipe alpha</a></li>
                            </ul></li>
                         <li><a href="#">proposta pedagógica<img src="image/icon/icon-seta-baixo.png" width="10px"></a>
                            <ul>
@@ -75,6 +76,16 @@
    
    <!-- PARTE PRINCIPAL DO SITE -->
       <main>
+         <!-- ULTIMAS NOTICIAS -->
+            <div class="noticias">
+               <div class="name-noticias">
+                  <h2>Ultimas Notícias</h2>
+                  <div class="name-traco"></div>
+               </div>
+
+
+            </div>
+         <!-- OFF ULTIMAS NOTICIAS -->
       </main>
    <!-- OFF PARTE PRINCIPAL DO SITE -->
 
