--- a/index.html
+++ b/index.html
@@ -77,14 +77,83 @@
    <!-- PARTE PRINCIPAL DO SITE -->
       <main>
          <!-- ULTIMAS NOTICIAS -->
-            <div class="noticias">
+            <section class="noticias">
                <div class="name-noticias">
                   <h2>Ultimas Notícias</h2>
                   <div class="name-traco"></div>
                </div>
+               
+               <!-- CARD NOTICIAS -->
+               
+                  <div class="org">
 
+                  <!-- DIAS DAS MÂES -->
+                  <a href="#"><div class="container-noticias">
+                     <div class="card-noticia">
+                        <div class="top">
+                           <img src="image/noticias/noticia-mae.png">
+                        </div>
+                        <div class="bottom">
+                           <div class="card-info">
+                              <div class="category">eventos</div>
+                              <div class="date">01/01/2023</div>
+                           </div>
+                           <div class="title">
+                              <h2>Dias das Mães</h2>
+                           </div>
+                           <div class="blog-author">Saiba mais...</div>
+                           <div class="bcg"></div>
+                        </div>
+                     </div>
+                  </div>
+                  </a>
 
-            </div>
+                  <!-- DIAS DAS MÂES -->
+                  <a href="#"><div class="container-noticias">
+                     <div class="card-noticia">
+                        <div class="top">
+                           <img src="image/noticias/noticia-mae.png">
+                        </div>
+                        <div class="bottom">
+                           <div class="card-info">
+                              <div class="category">eventos</div>
+                              <div class="date">01/01/2023</div>
+                           </div>
+                           <div class="title">
+                              <h2>Dias das Mães</h2>
+                           </div>
+                           <div class="blog-author">Saiba mais...</div>
+                           <div class="bcg"></div>
+                        </div>
+                     </div>
+                  </div>
+                  </a> 
+
+                  <!-- DIAS DAS MÂES -->
+                  <a href="#"><div class="container-noticias">
+                     <div class="card-noticia">
+                        <div class="top">
+                           <img src="image/noticias/noticia-mae.png">
+                        </div>
+                        <div class="bottom">
+                           <div class="card-info">
+                              <div class="category">eventos</div>
+                              <div class="date">01/01/2023</div>
+                           </div>
+                           <div class="title">
+                              <h2>Dias das Mães</h2>
+                           </div>
+                           <div class="blog-author">Saiba mais...</div>
+                           <div class="bcg"></div>
+                        </div>
+                     </div>
+                  </div>
+                  </a>
+
+               </div>
+               <!-- OFF CARD NOTICIAS -->
+
+            </section>
          <!-- OFF ULTIMAS NOTICIAS -->
       </main>
    <!-- OFF PARTE PRINCIPAL DO SITE -->
