--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
                </div>
                
                <!-- CARD NOTICIAS -->
-               
                   <div class="org">
 
                   <!-- DIAS DAS MÂES -->
@@ -95,49 +94,7 @@
                         </div>
                         <div class="bottom">
                            <div class="card-info">
-                              <div class="category">eventos</div>
-                              <div class="date">01/01/2023</div>
-                           </div>
-                           <div class="title">
-                              <h2>Dias das Mães</h2>
-                           </div>
-                           <div class="blog-author">Saiba mais...</div>
-                           <div class="bcg"></div>
-                        </div>
-                     </div>
-                  </div>
-                  </a>
-
-                  <!-- DIAS DAS MÂES -->
-                  <a href="#"><div class="container-noticias">
-                     <div class="card-noticia">
-                        <div class="top">
-                           <img src="image/noticias/noticia-mae.png">
-                        </div>
-                        <div class="bottom">
-                           <div class="card-info">
-                              <div class="category">eventos</div>
-                              <div class="date">01/01/2023</div>
-                           </div>
-                           <div class="title">
-                              <h2>Dias das Mães</h2>
-                           </div>
-                           <div class="blog-author">Saiba mais...</div>
-                           <div class="bcg"></div>
-                        </div>
-                     </div>
-                  </div>
-                  </a> 
-
-                  <!-- DIAS DAS MÂES -->
-                  <a href="#"><div class="container-noticias">
-                     <div class="card-noticia">
-                        <div class="top">
-                           <img src="image/noticias/noticia-mae.png">
-                        </div>
-                        <div class="bottom">
-                           <div class="card-info">
-                              <div class="category">eventos</div>
+                              <div class="category">evento</div>
                               <div class="date">01/01/2023</div>
                            </div>
                            <div class="title">
@@ -163,7 +120,7 @@
          <div id="footer-content">
             <div id="footer-contacts">
                <h1>Colégio Alpha</h1>
-               <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+               <p>Siga-nos em nossas redes sociais:</p>
 
                <div id="footer-social-midia">
                   <a href="#" class="footer-link" id="instagram"><img src="image/icon/icon-instagram.png"></a>
