--- a/index.html
+++ b/index.html
@@ -106,6 +106,27 @@
                      </div>
                   </div>
                   </a>
+                  
+                  <!-- DIAS DAS MÂES -->
+                  <a href="#"><div class="container-noticias">
+                     <div class="card-noticia">
+                        <div class="top">
+                           <img src="image/noticias/noticia-mae.png">
+                        </div>
+                        <div class="bottom">
+                           <div class="card-info">
+                              <div class="category">evento</div>
+                              <div class="date">01/01/2023</div>
+                           </div>
+                           <div class="title">
+                              <h2>Dias das Mães</h2>
+                           </div>
+                           <div class="blog-author">Saiba mais...</div>
+                           <div class="bcg"></div>
+                        </div>
+                     </div>
+                  </div>
+                  </a>
 
                </div>
                <!-- OFF CARD NOTICIAS -->
