--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
    
    <!-- PARTE PRINCIPAL DO SITE -->
       <main>
+
+         <!-- TEXTO -->
+            
+         <!-- OFF TEXTO -->
+
          <!-- ULTIMAS NOTICIAS -->
             <section class="noticias">
                <div class="name-noticias">
@@ -106,7 +111,7 @@
                      </div>
                   </div>
                   </a>
-                  
+
                   <!-- DIAS DAS MÂES -->
                   <a href="#"><div class="container-noticias">
                      <div class="card-noticia">
@@ -170,7 +175,9 @@
                </ul>
          </div>
          <div id="footer-copyright">
-            <img src="image/icon/selo-responsa.png">
+            <div class="copy-img">
+               <img src="image/icon/selo-responsa.png">
+            </div>
             <p>alpha educação - todos os direitos reservados<br>rua gervásio pires, 826, recife - pe</p>
             <p id="dev">&#169copyright - alpha 2023 da educação infantil ao ensino superior</p>
          </div>
