--- a/index.html
+++ b/index.html
@@ -78,7 +78,19 @@
       <main>
 
          <!-- TEXTO -->
-            
+            <section class="text-1">
+               <div class="container-text-1">
+                  <div class="faca-mais-text">
+                     <h3>Tudo planejado para a qualidade de ensino!</h3>
+                     <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed neque illum tempora eligendi, autem sit vitae, quod dolore quia aperiam labore error sint. Assumenda deleniti, accusamus adipisci eveniet et fugiat. Lorem ipsum.
+                     </p>
+                  </div>
+                     <div class="faca-mais-img">
+                        <img src="image/aluno/aluno-texto1.jpg" alt="aluno" width="320px">
+                     </div>
+               </div>
+            </section>
          <!-- OFF TEXTO -->
 
          <!-- ULTIMAS NOTICIAS -->
@@ -157,7 +169,7 @@
                   <li><a href="https://goo.gl/maps/S7ZNQ6NuBEBZUpix9" target="_blank" class="footer-link">Av. Dr. Cláudio José Gueiros, 2491 Shopping Norte Janga – Paulista/PE</a></li>
                      
                   <li id="list-margin"><h3>Política de Privacidade</h3></li>
-                  <li><a href="#" class="footer-link">Saiba mais></a></li>
+                  <li><a href="https://www.cssscript.com/privacy-policy/" target="_blank" class="footer-link">Saiba mais></a></li>
                </ul>
                <ul class="footer-list">
                   <li><h3>Central de Atendimento</h3></li>
