--- a/index.html
+++ b/index.html
@@ -83,12 +83,27 @@
                   <div class="faca-mais-text">
                      <h3>Tudo planejado para a qualidade de ensino!</h3>
                      <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed neque illum tempora eligendi, autem sit vitae, quod dolore quia aperiam labore error sint. Assumenda deleniti, accusamus adipisci eveniet et fugiat. Lorem ipsum.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed neque illum tempora eligendi, autem sit vitae, quod dolore quia aperiam labore error sint. Assumenda deleniti.
                      </p>
                   </div>
                      <div class="faca-mais-img">
                         <img src="image/aluno/aluno-texto1.jpg" alt="aluno" width="320px">
                      </div>
+               </div>
+            </section>
+
+            <section class="text-2">
+               <div class="container-text-2">
+                     <div class="faca-mais-img-2">
+                        <img src="image/aluno/aluno-texto1.jpg" alt="aluno" width="320px">
+                     </div>
+                  <div class="faca-mais-text-2">
+                     <h3>Tudo planejado para a qualidade de ensino!</h3>
+                     <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed neque illum tempora eligendi, autem sit vitae, quod dolore quia aperiam labore error sint. Assumenda deleniti, accusamus adipisci eveniet et fugiat. Lorem ipsum.
+                     </p>
+                  </div>
+ 
                </div>
             </section>
          <!-- OFF TEXTO -->
