--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                               <li><a href="#">regimento</a></li>
                               <li><a href="#">nossa identidade</a></li>
                               <li><a href="#">infraestrutura</a></li>
-                              <li><a href="#">equipe alpha</a></li>
+                              <li><a href="#">equipe colégio alpha</a></li>
                            </ul></li>
                         <li><a href="#">proposta pedagógica<img src="image/icon/icon-seta-baixo.png" width="10px"></a>
                            <ul>
