--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 
 <body>
 
+
    <!-- CABEÇALHO DO SITE -->
       <header style="background-image: url('image/background/backgroung-banner.png');">
          <!-- INFORMAÇÕES DE AJUDA -->
             <div class="topo-menu">
                <div class="info-menu">
                   <p>central de atendimento:</p>
-                  <img src="image/icon/icon-telefone.png" width="15px"><span class="numero">(81) 00000-0000</span>
+                  <img src="image/icon/icon-telefone.png" width="15px"><span class="numero">(81) 3317-0212</span>
                   <img src="image/icon/icon-email.png" width="15px"><span class="email">aaaaaaaaaaa@alpha.edu.br</span>
                </div>
             </div>
@@ -56,7 +57,7 @@
                               <li><a href="#">ensino fundamental ii</a></li>
                               <li><a href="#">ensino médio</a></li>
                            </ul></li>
-                        <li><a href="#">agênda eletrônica</a></li>
+                        <li><a href="https://pluriconnect.com.br/login" target="_blank">agênda eletrônica</a></li>
                         <li><a href="#">notícias</a></li>
                      </ul>
                   </nav>
@@ -74,8 +75,10 @@
       </header>
    <!-- OFF CABEÇALHO DO SITE -->
    
+
    <!-- PARTE PRINCIPAL DO SITE -->
       <main>
+
 
          <!-- TEXTO -->
             <section class="text-1">
@@ -98,7 +101,7 @@
                         <img src="image/aluno/aluno-texto1.jpg" alt="aluno" width="320px">
                      </div>
                   <div class="faca-mais-text-2">
-                     <h3>Tudo planejado para a qualidade de ensino!</h3>
+                     <h3>O Colégio que o seu filho merece!</h3>
                      <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed neque illum tempora eligendi, autem sit vitae, quod dolore quia aperiam labore error sint. Assumenda deleniti, accusamus adipisci eveniet et fugiat. Lorem ipsum.
                      </p>
@@ -107,6 +110,33 @@
                </div>
             </section>
          <!-- OFF TEXTO -->
+
+
+         <!-- PROPOSTA PEDAGÓGICA -->
+            <section class="slide-container swiper">
+               <div class="container-text">
+                  <div class="titulo-card">
+                     <h1>Proposta Pedagógica</h1>
+                  </div>
+               </div>
+   
+               <div class="slide-content">
+                  <div class="card-wrapper swiper-wrapper">
+   
+                     <div class="card swiper-slide"">
+                        <img src="#" alt="Imagem">
+                        <div class="content">
+                          <h2>ENSINO INFANTIL</h2>
+                          <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+
+               <div class="swiper-pagination"></div>
+            </section>
+         <!-- OFF PROPOSTA PEDAGÓGICA -->
+
 
          <!-- ULTIMAS NOTICIAS -->
             <section class="noticias">
@@ -167,6 +197,7 @@
          <!-- OFF ULTIMAS NOTICIAS -->
       </main>
    <!-- OFF PARTE PRINCIPAL DO SITE -->
+
 
    <!-- RODAPÉ DO SITE -->
       <footer>
