--- a/index.html
+++ b/index.html
@@ -115,9 +115,8 @@
          <!-- PROPOSTA PEDAGÓGICA -->
             <section class="slide-container swiper">
                <div class="container-text">
-                  <div class="titulo-card">
-                     <h1>Proposta Pedagógica</h1>
-                  </div>
+                  <h1>Proposta Pedagógica</h1>
+                  <div class="slide-traco"></div>
                </div>
    
                <div class="slide-content">
@@ -246,5 +245,8 @@
 
    <!-- JAVASCRIPT -->
    <script src="js/script.js"></script>
+
+   <!-- SWIPER JS -->
+   <script src="js/swiper-bundle.min.js"></script>
 
 </html>
