--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <link rel="icon" href="image/icon/icon-alpha.png"/>
 
    <!-- -------------------CSS SWIPER------------------- -->
-   <link rel="stylesheet" type="text/css" href=""/>
+   <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
 
 </head>
 
@@ -113,26 +113,62 @@
 
 
          <!-- PROPOSTA PEDAGÓGICA -->
-            <section class="slide-container swiper">
-               <div class="container-text">
+            <section class="slide-background">
+               <div class="background-text">
                   <h1>Proposta Pedagógica</h1>
                   <div class="slide-traco"></div>
                </div>
-   
-               <div class="slide-content">
-                  <div class="card-wrapper swiper-wrapper">
-   
-                     <div class="card swiper-slide"">
-                        <img src="#" alt="Imagem">
-                        <div class="content">
-                          <h2>ENSINO INFANTIL</h2>
-                          <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+
+               <div class="slide-container swiper">
+                  <div class="slide-content">
+                     <div class="card-wrapper swiper-wrapper">
+
+                        <div class="card swiper-slide">
+                           <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
+                           <div class="content">
+                              <h2>ENSINO INFANTIL</h2>
+                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                           </div>
+                        </div>
+                        
+                        <div class="card swiper-slide">
+                           <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
+                           <div class="content">
+                              <h2>ENSINO INFANTIL</h2>
+                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                           </div>
+                        </div>
+
+                        <div class="card swiper-slide">
+                           <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
+                           <div class="content">
+                              <h2>ENSINO INFANTIL</h2>
+                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                           </div>
+                        </div>
+                        
+                        <div class="card swiper-slide">
+                           <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
+                           <div class="content">
+                              <h2>ENSINO INFANTIL</h2>
+                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                           </div>
+                        </div>
+
+                        <div class="card swiper-slide">
+                           <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
+                           <div class="content">
+                              <h2>ENSINO INFANTIL</h2>
+                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                           </div>
                         </div>
                      </div>
                   </div>
+                  <div class="swiper-pagination"></div>
                </div>
 
-               <div class="swiper-pagination"></div>
+
+
             </section>
          <!-- OFF PROPOSTA PEDAGÓGICA -->
 
@@ -240,13 +276,13 @@
          </div>
       </footer>
    <!-- OFF RODAPÉ DO SITE -->
-   
 </body>
 
    <!-- JAVASCRIPT -->
    <script src="js/script.js"></script>
 
    <!-- SWIPER JS -->
+   <script src="js/swiper.js"></script>
    <script src="js/swiper-bundle.min.js"></script>
 
 </html>
