--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
    <link rel="stylesheet" type="text/css" href="css/index-css.css"/>
    <link rel="icon" href="image/icon/icon-alpha.png"/>
 
-   <!-- -------------------CSS SWIPER------------------- -->
-   <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
-
 </head>
 
 <body>
@@ -119,11 +116,10 @@
                   <div class="slide-traco"></div>
                </div>
 
-               <div class="slide-container swiper">
-                  <div class="slide-content">
-                     <div class="card-wrapper swiper-wrapper">
+               <div class="slide-container">
+                  <div class="card-wrapper">
 
-                        <div class="card swiper-slide">
+                        <div class="card">
                            <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
                            <div class="content">
                               <h2>ENSINO INFANTIL</h2>
@@ -131,44 +127,32 @@
                            </div>
                         </div>
                         
-                        <div class="card swiper-slide">
+                        <div class="card">
                            <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
                            <div class="content">
-                              <h2>ENSINO INFANTIL</h2>
+                              <h2>ENSINO FUNDAMENTAL I</h2>
                               <p class="description"><a href="#" class="btn">Sobre mais></a></p>
                            </div>
                         </div>
 
-                        <div class="card swiper-slide">
+                        <div class="card">
                            <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
                            <div class="content">
-                              <h2>ENSINO INFANTIL</h2>
+                              <h2>ENSINO FUNDAMENTAL II</h2>
                               <p class="description"><a href="#" class="btn">Sobre mais></a></p>
                            </div>
                         </div>
                         
-                        <div class="card swiper-slide">
+                        <div class="card">
                            <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
                            <div class="content">
-                              <h2>ENSINO INFANTIL</h2>
+                              <h2>ENSINO MÉDIO</h2>
                               <p class="description"><a href="#" class="btn">Sobre mais></a></p>
                            </div>
                         </div>
 
-                        <div class="card swiper-slide">
-                           <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
-                           <div class="content">
-                              <h2>ENSINO INFANTIL</h2>
-                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
-                           </div>
-                        </div>
-                     </div>
                   </div>
-                  <div class="swiper-pagination"></div>
                </div>
-
-
-
             </section>
          <!-- OFF PROPOSTA PEDAGÓGICA -->
 
@@ -281,8 +265,5 @@
    <!-- JAVASCRIPT -->
    <script src="js/script.js"></script>
 
-   <!-- SWIPER JS -->
-   <script src="js/swiper.js"></script>
-   <script src="js/swiper-bundle.min.js"></script>
 
 </html>
