--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
    <link rel="stylesheet" type="text/css" href="css/index-css.css"/>
    <link rel="icon" href="image/icon/icon-alpha.png"/>
 
+   <!-- --------------Fontawesome Link for Icons-------------- -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+
+   <script src="js/swiper.js" defer></script>
+
 </head>
 
 <body>
@@ -116,43 +121,56 @@
                   <div class="slide-traco"></div>
                </div>
 
-               <div class="slide-container">
-                  <div class="card-wrapper">
+            <div class="container-card-slide">
+               <div class="wrapper">
+                  <i id="left" class="fa-solid fa-angle-left"></i>
+                  <ul class="carousel">
 
-                        <div class="card">
-                           <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
+                     <li class="card">
+                        <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
                            <div class="content">
-                              <h2>ENSINO INFANTIL</h2>
+                              <h2>ensino infantil</h2>
                               <p class="description"><a href="#" class="btn">Sobre mais></a></p>
                            </div>
-                        </div>
-                        
-                        <div class="card">
-                           <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
-                           <div class="content">
-                              <h2>ENSINO FUNDAMENTAL I</h2>
-                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
-                           </div>
-                        </div>
+                     </li>
 
-                        <div class="card">
-                           <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
+                     <li class="card">
+                        <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
                            <div class="content">
-                              <h2>ENSINO FUNDAMENTAL II</h2>
+                              <h2>ensino fundamental i</h2>
                               <p class="description"><a href="#" class="btn">Sobre mais></a></p>
                            </div>
-                        </div>
-                        
-                        <div class="card">
-                           <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
-                           <div class="content">
-                              <h2>ENSINO MÉDIO</h2>
-                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
-                           </div>
-                        </div>
+                     </li>
 
-                  </div>
+                     <li class="card">
+                        <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
+                           <div class="content">
+                              <h2>ensino fundamental ii</h2>
+                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                           </div>
+                     </li>
+
+                     <li class="card">
+                        <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
+                           <div class="content">
+                              <h2>ensino médio</h2>
+                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                           </div>
+                     </li>
+
+                     <li class="card">
+                        <img src="image/aluno/aluno-texto1.jpg" alt="Imagem">
+                           <div class="content">
+                              <h2>atividades extra-curricular</h2>
+                              <p class="description"><a href="#" class="btn">Sobre mais></a></p>
+                           </div>
+                     </li>
+
+                  </ul>
+                  <i id="left" class="fa-solid fa-angle-right"></i>
                </div>
+
+            </div>
             </section>
          <!-- OFF PROPOSTA PEDAGÓGICA -->
 
